--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -20,9 +20,16 @@ execute:
 #| context: setup
 # Libraries, fonts themes
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, dev = "svg")
-xfun::pkg_attach("tidyverse", "here", "scales", "qs", "zoo", "patchwork", "shiny", "rlang", "ggrepel", "ggtext", "ggfittext", "kableExtra")
+xfun::pkg_attach("tidyverse", "here", "scales", "qs", "zoo", "patchwork", "shiny", "rlang", "ggrepel", "ggtext", "ggfittext", "kableExtra", "glue", "legendry")
 
-dashpal <-  c("#8f1f3f", "#6F8FCF","#d4ae0b", "#de860b", "#3E7D49","#c73200", "#b7a4d6", "#767676", "#020101")
+dashpal <-  c("#771155", "#117777")
+rpal <- c("#771155", "#AA4488", "#CC99BB", 
+          "#114477", "#4477AA", "#77AADD", 
+          "#117777", "#44AAAA", "#77CCCC", 
+          "#117744", "#44AA77", "#88CCAA", 
+          "#777711", "#AAAA44", "#DDDD77", 
+          "#774411", "#AA7744", "#DDAA77", 
+          "#771122", "#AA4455", "#DD7788")
 dens_pal <- list(c(`Union member` = dashpal[2], `Not member` = "#DADDEF"),
                       c(`Union member` = dashpal[1], `Not member` = "#DADDEF"))
 bar_pal <- list(
@@ -73,178 +80,29 @@ theme_rr_dash <-
 #| context: data
 #| include: false
 # Data import and prep
-lfs_freq <- qread(here('_targets', 'objects', 'lfs_freq'))
-
-# Summarize totals and averages by year
-base_df <- lfs_freq |>
-  filter(
-    !is.na(varlevel),
-    union_bin != "Not applicable",
-    cowmain_rc != "Self-employed",
-    varlevel != "Non-earner"
-  ) |>
-  select(ref_date, variable, varlevel, cowmain_rc, union_bin, n_v, p_v) |>
-  mutate(
-    var_orig = variable,
-    # Variable names to final labels
-    variable = case_when(
-      variable %in% c("nse", "ftptmain", "permtemp", "mjh") ~ "Employment status",
-      variable == "prov" ~ "Province",
-      variable == "cma" ~ "CMA",
-      variable == "age_12" ~ "Age (12 groups)",
-      variable == "sex" ~ "Gender",
-      variable == "educ_rc" ~ "Education",
-      variable == "fam_rc" ~ "Family type",
-      variable == "agyownk" ~ "Youngest child",
-      variable == "immig" ~ "Immigration",
-      variable == "naics_21" ~ "Industry",
-      variable == "noc_10" ~ "Occupation",
-      variable == "tenure_rc" ~ "Job tenure"
-    ),
-    union_bin = fct_rev(union_bin),
-    cowmain_rc = fct_relabel(cowmain_rc, \(x) str_remove(x, " employees")),
-    cowmain_rc = fct_rev(cowmain_rc),
-    survyear = year(ref_date),
-    
-    # Setting some industry level variables to missing manually
-    p_v = case_when(
-      variable == "Industry" &
-        cowmain_rc == "Public sector" &
-        varlevel %in% c(
-          "Agriculture",
-          "Accommodation and food services",
-          "Fishing, hunting and trapping",
-          "Forestry and logging and support activities for forestry",
-          "Manufacturing - durable goods",
-          "Manufacturing - non-durable goods",
-          "Mining, quarrying, and oil and gas extraction",
-          "Other services (except public administration)",
-          "Wholesale trade"
-        ) ~ NA,
-      variable == "Industry" &
-        cowmain_rc == "Private sector" &
-        varlevel == "Public administration" ~ NA,
-      .default = p_v
-    ),
-    
-    # Recoding some factor levels to be more compact
-    varlevel = case_when(
-      
-      # Province
-      varlevel == "Newfoundland and Labrador" ~ "Newfoundland",
-      varlevel == "Prince Edward Island" ~ "PEI",
-      
-      # Employment
-      varlevel == "Single jobholder, including job changers" ~ "Single jobholder",
-      varlevel == "Temporary, casual or other temporary jobs" ~ "Temporary, casual",
-      varlevel == "Temporary, seasonal job" ~ "Temporary, seasonal",
-      varlevel == "Temporary, term or contract job" ~ "Temporary, term/contract",
-      
-      varlevel == "Immigrant, landed 10 or less years earlier" ~ "Immigrant, here < 10 years",
-      varlevel == "Immigrant, landed more than 10 years earlier" ~ "Immigrant, here > 10 years",
-      
-      varlevel == "Not applicable" ~ "No children",
-      varlevel == "Youngest child less than 6 years" ~ "Under 6 years",
-      varlevel == "Youngest child 6 to 12 years" ~ "6-12 years",
-      varlevel == "Youngest child 13 to 17 years" ~ "13-17 years",
-      varlevel == "Youngest child 18 to 24 years" ~ "18-24 years",
-      
-      # Job tenure
-      varlevel ==  "[1,12)" ~ "Under 1 year",
-      varlevel ==  "[12,60)" ~ "1 to under 5",
-      varlevel ==  "[60,120)" ~ "5 to under 10",
-      varlevel ==  "[120,Inf]" ~ "10 years or more",
-      
-      # Industry
-      varlevel == "Accommodation and food services" ~ "Accomodation/Food",
-      varlevel == "Business, building and other support services" ~ "Business/Building/Other support services",
-      varlevel == "Educational services" ~ "Education",
-      varlevel == "Finance and insurance" ~ "Finance/Insurance",
-      varlevel == "Fishing, hunting and trapping" ~ "Fishing/Hunting/Trapping",
-      varlevel == "Forestry and logging and support activities for forestry" ~ "Forestry/Support activities",
-      varlevel == "Health care and social assistance" ~ "Health care/Social assistance",
-      varlevel == "Information, culture and recreation" ~ "Information/Culture/Recreation",
-      varlevel == "Manufacturing - durable goods" ~ "Manufacturing, durable",
-      varlevel == "Manufacturing - non-durable goods" ~ "Manufacturing, non-durable",
-      varlevel == "Mining, quarrying, and oil and gas extraction" ~ "Mining/Quarrying/Oil and gas",
-      varlevel == "Other services (except public administration)" ~ "Other services",
-      varlevel == "Professional, scientific and technical services" ~ "Professional/Scientific/Technical",
-      varlevel == "Real estate and rental and leasing" ~ "Real estate/Rental/Leasing",
-      varlevel == "Transportation and warehousing" ~ "Transportation/Warehousing",
-      
-      # Occupation
-      varlevel == "Business, finance and administration occupations, except management" ~ 
-        "Business/Finance/Administrative",
-      varlevel == "Health occupations, except management" ~ "Health",
-      varlevel == "Management occupations" ~ "Management",
-      varlevel == "Natural and applied sciences and related occupations, except management" ~ "Natural/Applied sciences",
-      varlevel == "Natural resources, agriculture and related production occupations, except management" ~ "Natural resources/Agriculture/Related",
-      varlevel == "Occupations in art, culture, recreation and sport, except management" ~ "Art/Culture/Recreation/Sport",
-      varlevel == "Occupations in education, law and social, community and government services, except management" ~ 
-        "Education/Law/Social, community and govt services",
-      varlevel == "Occupations in manufacturing and utilities, except management" ~ "Manufacturing/Utilities",
-      varlevel == "Sales and service occupations, except management" ~ "Sales/Service",
-      varlevel == "Trades, transport and equipment operators and related occupations, except management" ~ "Trades/Transport/Equipment operators",
-      .default = as.character(varlevel)
-    )
-  ) |> relocate(var_orig, .before = variable)
-
-emp_vars <- c("nse", "ftptmain", "permtemp", "mjh")
-
-var_key <- base_df |> distinct(var_orig, variable)
-
-# Summarize the data from monthly to yearly
-## Union density
-dens_df <- base_df |> 
-  group_by(survyear, variable, varlevel, cowmain_rc, union_bin) |>
-  summarise(p_v = mean(p_v, na.rm = TRUE),
-            n_v = mean(n_v, na.rm = TRUE)) |>
-  ungroup()
-
-# Summarize the data from monthly to yearly
-## Population proportions and counts
-pop_df <- base_df |> 
-  filter(union_bin == "Union member") |> 
-  group_by(survyear, var_orig, varlevel, cowmain_rc) |>
-  summarise(n_v = mean(n_v, na.rm = TRUE)) |>
-  ungroup() |> 
-  group_by(survyear, var_orig, cowmain_rc) |> 
-  mutate(
-      p_memb = n_v / sum(n_v),
-      p_memb_bd = 1 - p_memb,
-      cowmain_rc = as_factor(as.character(cowmain_rc))) |> 
-  left_join(var_key) |> 
-  relocate(variable, .after = var_orig)
+dens_df <- qread(here('_targets', 'objects', 'density_df'))
+pop_df <- qread(here('_targets', 'objects', 'dist_df'))
 
 # Dataframe full of default factor levels
 factor_levels <- 
   tribble(~varlevel, ~variable,
           
-   # Age
-  "15 to 19 years","Age (12 groups)",
-  "20 to 24 years","Age (12 groups)",
-  "25 to 29 years","Age (12 groups)",
-  "30 to 34 years","Age (12 groups)",
-  "35 to 39 years","Age (12 groups)",
-  "40 to 44 years","Age (12 groups)",
-  "45 to 49 years","Age (12 groups)",
-  "50 to 54 years","Age (12 groups)",
-  "55 to 59 years","Age (12 groups)",
-  "60 to 64 years","Age (12 groups)",
-  "65 to 69 years","Age (12 groups)",
-  "70 and over","Age (12 groups)",
+  "15 to 24","Age group",
+  "25 to 54","Age group",
+  "55 to 64","Age group",
+  "65+", "Age group",
   
   # CMA
   "Calgary","CMA",
   "Edmonton","CMA",
   "Hamilton","CMA",
   "Montréal","CMA",
-  "Other CMA or non-CMA","CMA",
-  "Ottawa–Gatineau (Ontario part)","CMA",
+  "Ottawa–Gatineau","CMA",
   "Québec","CMA",
   "Toronto","CMA",
   "Vancouver","CMA",
   "Winnipeg","CMA",
+  "Other CMA/non-CMA", "CMA",
   
   # Province
   "Alberta","Province",
@@ -259,12 +117,17 @@ factor_levels <-
   "Saskatchewan","Province",
   
   # Education
-  "Under secondary", "Education",
-  "Secondary/Some PSE", "Education",
-  "College","Education",
-  "Undergraduate","Education",
-  "Graduate","Education",
+  "Under secondary", "Education level",
+  "Secondary/Some PSE", "Education level",
+  "College","Education level",
+  "Undergraduate","Education level",
+  "Graduate","Education level",
   
+  # Student status
+  "Non-student", "Student status",
+  "Part-time student", "Student status",
+  "Full-time student", "Student status",
+
   # Family type
   "Dual-earner","Family type",
   "Single-earner","Family type",
@@ -273,13 +136,13 @@ factor_levels <-
   "Other families","Family type",
 
   # Gender
-  "Female","Gender",
-  "Male","Gender",
+  "Women","Gender",
+  "Men","Gender",
   
   # Immigration
   "Non-immigrant","Immigration",
-  "Immigrant, here > 10 years","Immigration",
-  "Immigrant, here < 10 years","Immigration",
+  "Immigrant > 10 years","Immigration",
+  "Immigrant < 10 years","Immigration",
   
   # Employment
   "Standard employment","Employment status",
@@ -302,7 +165,7 @@ factor_levels <-
   # Industry
   "Accomodation/Food","Industry",
   "Agriculture","Industry",
-  "Business/Building/Other support services","Industry",
+  "Business/Building/Other services","Industry",
   "Construction","Industry",
   "Education","Industry",
   "Finance/Insurance","Industry",
@@ -321,18 +184,30 @@ factor_levels <-
   "Transportation/Warehousing","Industry",
   "Utilities","Industry",
   "Wholesale trade","Industry",
+  
+  # Firm size
+  "Less than 20 employees", "Firm size",
+  "20 to 99 employees", "Firm size",    
+  "100 to 500 employees", "Firm size",  
+  "More than 500 employees", "Firm size",
+
+  # Est size
+  "Less than 20 employees", "Establishment size",
+  "20 to 99 employees", "Establishment size",    
+  "100 to 500 employees", "Establishment size",  
+  "More than 500 employees", "Establishment size",
 
   # Occupation
-  "Business/Finance/Administrative","Occupation",
+  "Business/Finance/Admin","Occupation",
   "Health","Occupation",
   "Management","Occupation",
   "Natural/Applied sciences","Occupation",
   "Natural resources/Agriculture/Related","Occupation",
   "Art/Culture/Recreation/Sport","Occupation",
-  "Education/Law/Social, community and govt services","Occupation",
+  "Education/Law/SCG services","Occupation",
   "Manufacturing/Utilities","Occupation",
   "Sales/Service","Occupation",
-  "Trades/Transport/Equipment operators","Occupation",
+  "Trades/Transport/Equip operators","Occupation",
   
   # Youngest child
   "No children","Youngest child",
@@ -344,22 +219,39 @@ factor_levels <-
 
 # Pull main variables for selector list
 dash_vars <- dens_df |> distinct(variable) |> pull() |> as.character()
-dash_vars_order <- c("Province", "CMA", "Age (12 groups)", "Education", "Gender", "Family type", "Youngest child", "Immigration", "Occupation","Industry","Employment status", "Job tenure")
+dash_vars_order <- c(
+  "Province",
+  "CMA",
+  "Age group",
+  "Gender",
+  "Family type",
+  "Youngest child",
+  "Education level",
+  "Student status",
+  "Immigration",
+  "Occupation",
+  "Industry",
+  "Establishment size",
+  "Firm size",
+  "Employment status",
+  "Job tenure"
+)
 dash_vars <- dash_vars[order(match(dash_vars, dash_vars_order))]
+```
+
+#  {.toolbar}
+
+```{r}
+selectInput("variable", label = "Select variable", choices = dash_vars)
+selectInput("gg_layout", label = 'Layout', choices = c("Vertical", "Horizontal", "Stacked"))
+selectInput("measure", label = "Measure", choices = c("Union density", "Distribution (%)", "Distribution (N)"))
 ```
 
 # Home
 
 Here is a home page with some information, attribution, instructions etc.
 
-# Density
-
-##  {.toolbar}
-
-```{r}
-selectInput("variable", label = "Select variable", choices = dash_vars)
-selectInput("gg_layout", label = 'Layout', choices = c("Vertical", "Horizontal"))
-```
+# Charts
 
 ## Content
 
@@ -367,36 +259,10 @@ selectInput("gg_layout", label = 'Layout', choices = c("Vertical", "Horizontal")
 #| fill: false
 #| flow: true
 #| dev: "svg"
-plotOutput('plot_dens', height = "100%", width = "100%")
-```
-
-# Demographics
-
-##  {.toolbar}
-
-```{r}
-selectInput("variable", label = "Select variable", choices = dash_vars)
-selectInput("gg_layout", label = 'Layout', choices = c("Vertical", "Horizontal"))
-selectInput("gg_measure", label = 'Measure', choices = c("Proportion", "Count"))
-```
-
-## Content
-
-```{r}
-#| fill: false
-#| flow: true
-#| dev: "svg"
-plotOutput('plot_pop', height = "100%", width = "100%")
+plotOutput('plot', height = "100%", width = "100%")
 ```
 
 # Table
-
-##  {.toolbar}
-
-```{r}
-selectInput("variable", label = "Select variable", choices = dash_vars)
-selectInput("tab_measure", label = "Measure", choices = c("Density", "Demographics (%)", "Demographics (N)"))
-```
 
 ## Content
 
@@ -410,6 +276,7 @@ tableOutput('table')
 ```{r}
 #| context: server
 
+##### DATA
 # Default factor levels
 flevels <- reactive({
   req(input$variable)
@@ -417,45 +284,199 @@ flevels <- reactive({
     pull(varlevel) |> as.character()
 })
 
-# Create data set, reactive
+# Create union density data set, reactive
 dataset <- reactive({
   req(input$variable)
   df <- dens_df[dens_df$variable == input$variable, ] |> 
     mutate(varlevel = factor(varlevel, levels = flevels()))
 })
 
+# Create demographic dataset, reactive
+dataset_pop <- reactive({
+  req(input$variable)
+  df <- pop_df[pop_df$variable == input$variable, ] |>
+    mutate(varlevel = factor(varlevel, levels = flevels())) |>
+    group_by(survyear, variable, var_orig, cowmain_rc) |>
+    mutate(
+      p_memb = n / sum(n),
+      # Calculate the bar/area backdrop
+      p_memb_bd = 1 - p_memb,
+      cowmain_rc = as_factor(as.character(cowmain_rc))
+      )
+})
+
+# Calculate population totals per variable level
+pop_totals <- reactive({dataset_pop() |> 
+  filter(survyear==2024) |> 
+  group_by(survyear, var_orig, varlevel) |> 
+  reframe(n = sum(n), p_memb = sum(p_memb)) |> 
+  arrange(-n)
+})
+
+# Create character vector for default factor ordering
+pop_levels <- reactive({pop_totals() |> 
+  pull(varlevel) |> 
+  as.character()
+})
+
+# Create reactive data set for Kable table
+kbl_df <- reactive({
+  if (input$measure == "Union density") {
+    kb_prep(dataset())
+  } else if (input$measure %in% c("Distribution (%)", "Distribution (N)")) {
+    kb_prep(dataset_pop())
+  }
+})
+```
+
+```{r}
+#| context: server
+##### HELPER
+
 # Programmatic chart and output height
 n_facets <- function() {
-  return (500 * ( distinct(dataset(), varlevel) |> nrow() /  2) )
+  # All vertical and horizontal charts
+  if (input$gg_layout %in% c("Vertical", "Horizontal")) {
+    return (500 * (distinct(dataset(), varlevel) |> nrow() /  2))
+    # Stacked charts for demographics
+  } else if (input$gg_layout == "Stacked" &
+             input$variable != "Employment status" &
+             input$measure != "Union density") {
+    return(650)
+  } else if (input$gg_layout == "Stacked" &
+           input$variable == "Employment status" &
+           input$measure != "Union density") {
+    return(1200)
+  } else if (input$gg_layout == "Stacked" &
+           input$measure == "Union density") {
+    return (500 * (distinct(dataset(), varlevel) |> nrow() /  2))
+  }
 }
 
 # Number of facets desired by variable
-num_rows <- reactive(case_when(
-      input$variable %in% c("Gender") ~ 1,
-      input$variable %in% c("Education", "Family type", "Youngest child", 
-                      "Immigration", "Job tenure") ~ 2,
-      input$variable %in% 
-        c("Age (12 groups)", "Province", "CMA", "Occupation",  "Employment status") ~ 4,
-      input$variable %in% c("Industry") ~ 7
-      )
+num_rows <- reactive(
+  case_when(
+    input$variable %in% c("Gender","Immigration","Age group","Student status") ~ 1,
+    input$variable %in% c(
+      "Education level",
+      "Family type",
+      "Youngest child",
+      "Job tenure",
+      "Firm size",
+      "Establishment size"
+    ) ~ 2,
+    input$variable %in%
+      c(
+        "Province",
+        "CMA",
+        "Occupation",
+        "Employment status"
+      ) ~ 4,
+    input$variable %in% c("Industry") ~ 7
+  )
 )
 
+# Area margins desired by variable
+area_margins <- reactive(
+  case_when(
+    input$variable %in% c("Gender") ~ 75,
+    input$variable %in% c(
+      "Job tenure",
+      "Age group",
+      "Family type",
+      "Youngest child",
+      "Student status"
+    ) ~ 130,
+    input$variable %in%
+      c("Province", "CMA","Education level","Immigration","Employment status", "Firm size", "Establishment size") ~ 150,
+    input$variable %in% c("Industry", "Occupation") ~ 270
+  )
+)
+
+## Table helpers
+# Kable table prep
+kb_prep <- function(df) {
+  
+  variable <- df |> distinct(variable) |> pull(variable) |> as.character()
+  
+  if (input$measure == "Union density") {
+    df <- df |>
+      filter(union_bin == "Union member") |> 
+      select(survyear, cowmain_rc, varlevel, value = p) |> 
+      pivot_wider(
+        id_cols = c(survyear, cowmain_rc),
+        names_from = varlevel,
+        values_fn = \(x) cell_spec(formattable::percent(x, digits = 1))
+      ) 
+    
+  } else if (input$measure == "Distribution (%)") {
+    df <- df |>
+      select(survyear, cowmain_rc, varlevel, value = p_memb) |> 
+      pivot_wider(
+        id_cols = c(survyear, cowmain_rc),
+        names_from = varlevel,
+        values_fn = \(x) cell_spec(formattable::percent(x, digits = 1))
+      ) 
+  }
+  
+  else if (input$measure == "Distribution (N)") {
+    df <- df |>
+      select(survyear, cowmain_rc, varlevel, value = n) |> 
+      pivot_wider(
+        id_cols = c(survyear, cowmain_rc),
+        names_from = varlevel,
+        values_fn = \(x) cell_spec(formattable::comma(x/1000, digits = 0)) 
+      ) 
+  }
+  
+  if (input$variable %in% c("Industry", "Occupation")) {
+    df |> 
+      pivot_longer(3:last_col()) |> 
+      pivot_wider(names_from = 1) |> 
+      arrange(cowmain_rc)
+
+  } else {
+    df |> 
+      arrange(cowmain_rc)
+  }
+}
+
+# Kable table subtitles
+kb_title <- reactive({
+  if (input$measure == "Union density") {
+    "<span style='font-size:18px'><b>Union density (% of group that are Union members)</b></span>"
+  } else if (input$measure == "Distribution (%)") {
+    "<span style='font-size:18px'><b>Distribution of Union member by group</b></span>"
+  } else if (input$measure == "Distribution (N)") {
+    "<span style='font-size:18px'><b>Number of union members in thousands</b></span>"
+  }
+})
+```
+
+```{r}
+#| context: server
 ##### Base plot functions
-# Union density
+
+# Union density (Vertical and Horizontal)
 union_density_gg <- function(.data, pal) {
+  
   # For ordering plots by average values of coverage
   if (input$gg_layout == "Horizontal") {
     horiz_levels <- filter(.data, union_bin == "Union member") |>
-      group_by(varlevel) |> reframe(p_v = mean(p_v)) |> arrange(-p_v) |> pull(varlevel)
-    
+      group_by(varlevel) |>
+      reframe(p = mean(p, na.rm = TRUE)) |>
+      arrange(-p) |>
+      pull(varlevel) |>
+      as.character()
+
     .data <- mutate(.data, varlevel = factor(varlevel, levels = horiz_levels))
   }
-  
+
   gg <- ggplot(
     .data,
     aes(
       x = .data$survyear,
-      y = .data$p_v,
+      y = .data$p,
       fill = .data$union_bin,
       color = .data$union_bin
     )
@@ -466,7 +487,7 @@ union_density_gg <- function(.data, pal) {
     geom_hline(yintercept = 0, color = "#d8d8d8") +
     coord_cartesian(clip = "off") +
     scale_y_continuous(labels = label_percent(),
-                       limits = c(0, 1),
+                       #limits = c(0, 1),
                        expand = c(0, 0)) +
     scale_fill_manual(values = pal, na.value = "#DADDEF") +
     scale_color_manual(values = pal, na.value = "#DADDEF") +
@@ -487,7 +508,7 @@ union_density_gg <- function(.data, pal) {
           union_bin == "Union member",
           survyear %in% seq(2006, 2024, by = 3)
         ),
-        aes(label = percent(.data$p_v, accuracy = .1)),
+        aes(label = percent(.data$p, accuracy = .1)),
         vjust = 0,
         hjust = 0.5,
         nudge_y = .04,
@@ -505,113 +526,122 @@ union_density_gg <- function(.data, pal) {
                  axes = "all_x")
     
     # Horizontal layout
-  } else if (input$gg_layout == "Horizontal")
+  } else if (input$gg_layout == "Horizontal") {
     
     gg +
-    geom_text(
+    geom_text_repel(
       data = filter(
         .data,
         union_bin == "Union member",
         survyear %in% seq(2006, 2024, by = 6)
       ),
-      aes(label = percent(.data$p_v, accuracy = .1)),
+      aes(label = percent(.data$p, accuracy = .1)),
       vjust = 0,
       #hjust = 0.42,
       hjust = 0.5,
       nudge_y = .04,
-      check_overlap = TRUE,
+      #check_overlap = TRUE,
       fontface = "bold",
       size = 6,
+      point.size = NA,
+      min.segment.length = Inf,
+      force = .25
     ) +
     theme(
       panel.spacing.x = unit(10, "pt"),
-      axis.text.x = element_markdown(hjust = c(0, 1)),
+     # axis.text.x = element_markdown(hjust = c(0, 1)),
       strip.clip = "on"
     ) +
     scale_x_continuous(
       expand = c(0.05, 0.05),
-      breaks = c(2006, 2024),
+      breaks = seq(2006, 2024, by = 6),
       guide = guide_axis(check.overlap = TRUE)
     ) +
     facet_wrap(
-      vars(fct_reorder(varlevel, p_v, na.rm = TRUE)),
+      vars(varlevel),
       nrow = num_rows(),
       dir = "h",
       axes = "all_x",
       drop = TRUE,
       labeller = label_wrap_gen(width = 30)
     )
-}
-
-# Create two charts per sector, patchwork into one chart
-union_density_patch <- function(df, pal) {
-  
-  facet_blank <- function(str) {str_replace_all(str, ".", "")}
-  
-  ggs <- group_by(df, cowmain_rc) |> 
-    group_split() |> 
-    map2(pal, \(x,y) union_density_gg(x, y))
-  
-  ggs[[1]] <- ggs[[1]] + 
-    ggtitle("PRIVATE SECTOR", subtitle = "Share of paid employees that are union members") +
-    theme(plot.title = element_text(color = dashpal[2]))
-  
-  ggs[[2]] <- ggs[[2]] + 
-    ggtitle("PUBLIC SECTOR", subtitle = "Share of paid employees that are union members") +
-    theme(plot.title = element_text(color = dashpal[1]))
-  
-  if(input$gg_layout == "Vertical") {
-    ggs[[1]] + ggs[[2]]
-  } else if (input$gg_layout == "Horizontal") {
-    ggs[[1]] / ggs[[2]]
   }
 }
 
-# Render density plots
-output$plot_dens <- renderPlot({
-  p <- union_density_patch(dataset(), dens_pal)
-  return(p)
+# Union density (Stacked, total workforce)
+union_density_stacked_gg <- function(.data) {
   
-}, height = n_facets
-)
-
-##### Member demographics
-# Bar charts
-## Subset reactive dataset to union members only
-## Calculate the demographic proportions of union members + bar chart backdrop
-dataset_pop <- reactive({
-  req(input$variable)
-  df <- pop_df[pop_df$variable == input$variable, ] |>
-    mutate(varlevel = factor(varlevel, levels = flevels())) |>
-    group_by(survyear, variable, var_orig, cowmain_rc) |>
-    mutate(
-      p_memb = n_v / sum(n_v),
-      p_memb_bd = 1 - p_memb,
-      cowmain_rc = as_factor(as.character(cowmain_rc))
+  dens_pal_flat <- c(
+    `Private (Unionized)` = dashpal[2],
+    `Private (No union)` = colorspace::lighten(dashpal[2], .5),
+    `Public (Unionized)` = dashpal[1],
+    `Public (No union)` = colorspace::lighten(dashpal[1], .5)
+  )
+  
+  .data <- mutate(.data, unioncow = fct_rev(unioncow))
+  
+  gg <- .data |>
+    ggplot(
+      aes(
+        x = .data$survyear,
+        y = .data$p_pop,
+        fill = .data$unioncow,
       )
-})
+    ) +
+    geom_area(
+      aes(color = .data$unioncow),
+      show.legend = c(fill = TRUE, color = NA)
+    ) +
+    geom_label(
+      data = filter(.data, 
+                    survyear %in% seq(2006,2024, by = 3),
+                    p_pop >= .03),
+      aes(
+        label = percent(.data$p_pop, accuracy = .1),
+        group = unioncow
+      ),
+      vjust = 0.5,
+      hjust = 0.5,
+      fontface = "bold",
+      size = 6,
+      position = "stack",
+      color = "#fff",
+      label.padding = unit(.01, "lines"),
+      show.legend = FALSE
+    ) +
+    geom_hline(yintercept = 0, color = "#d8d8d8") +
+    coord_cartesian(clip = "off") +
+    scale_x_continuous(breaks = seq(2006, 2024, by = 3),
+                       guide = guide_axis(check.overlap = TRUE)) +
+    scale_y_continuous(labels = label_percent(), #limits = c(0, 1),
+                       expand = c(0, 0)) +
+    
+    scale_fill_manual(values = dens_pal_flat, na.value = "#DADDEF") +
+    scale_color_manual(values = dens_pal_flat, na.value = "#DADDEF", guide = "none") +
+    theme_rr_dash() +
+    guides(fill = guide_legend(reverse = TRUE, title = NULL)
+           ) +
+    theme(
+      legend.position = "top",
+      legend.text = element_text(size = 18, face = 'bold'),
+      legend.key.size = unit(22, 'pt'),
+      panel.grid = element_blank(),
+      axis.text.y.left = element_blank(),
+      panel.spacing.y = unit(15, "pt")
+    ) +
+    labs(x = NULL, y = NULL, 
+         subtitle = 
+           glue("Union member share of workforce (paid employees) by {input$variable}")) +
+    facet_wrap(vars(varlevel), ncol = 2, dir = "v", axes = "all_x")
+}
 
-# Calculate population totals per variable level
-pop_totals <- reactive({dataset_pop() |> 
-  filter(survyear==2024) |> 
-  group_by(survyear, var_orig, varlevel) |> 
-  reframe(n_v = sum(n_v), p_memb = sum(p_memb)) |> 
-  arrange(-n_v)
-})
-
-# Create character vector for default factor ordering
-pop_levels <- reactive({pop_totals() |> 
-  pull(varlevel) |> 
-  as.character()
-})
-
-# Bar chart function
+# Demographics, bar charts
 union_bars_gg <- function(.data, pal) {
   .data <- filter(.data, survyear %in% seq(2006, 2024, by = 3))
   
   # For ordering plots by average values horizontally - Proportions
   if (input$gg_layout == "Horizontal" &
-      input$gg_measure == "Proportion") {
+      input$measure == "Distribution (%)") {
     horiz_levels <- group_by(.data, varlevel) |>
       reframe(p_memb = mean(p_memb)) |>
       arrange(-p_memb) |>
@@ -621,17 +651,17 @@ union_bars_gg <- function(.data, pal) {
     
     # For ordering plots by average values horizontally - Counts
   } else if (input$gg_layout == "Horizontal" &
-             input$gg_measure == "Count") {
+             input$measure == "Distribution (N)") {
     horiz_levels <- group_by(.data, varlevel) |>
-      reframe(n_v = sum(n_v)) |>
-      arrange(-n_v) |>
+      reframe(n = sum(n)) |>
+      arrange(-n) |>
       pull(varlevel)
     
     .data <- mutate(.data, varlevel = factor(varlevel, levels = horiz_levels))
   }
   
   ##### FOR PROPORTIONS
-  if (input$gg_measure == "Proportion") {
+  if (input$measure == "Distribution (%)") {
     .data <- select(.data,
                     survyear,
                     variable,
@@ -674,11 +704,11 @@ union_bars_gg <- function(.data, pal) {
       labs(x = NULL, y = NULL)
     
     ##### FOR COUNTS
-  } else if (input$gg_measure == "Count") {
+  } else if (input$measure == "Distribution (N)") {
     gg <- ggplot(.data,
                  aes(
                    x = .data$survyear,
-                   y = .data$n_v,
+                   y = .data$n,
                    fill = .data$cowmain_rc,
                  )) +
       geom_col() +
@@ -727,12 +757,39 @@ union_bars_gg <- function(.data, pal) {
         nrow = num_rows(),
         dir = "h",
         axes = "all_x",
-        drop = FALSE,
+        drop = TRUE,
         labeller = label_wrap_gen(width = 30)
       ) +
       theme(panel.spacing.x = unit(10, "pt"),
             panel.spacing.y = unit(15, "pt"),
             strip.clip = "on")
+  }
+}
+
+## Patchwork functions
+# Create two charts per sector, patchwork into one chart
+union_density_patch <- function(df, pal) {
+  
+  if (input$gg_layout %in% c("Vertical", "Horizontal")) {
+    ggs <- group_by(df, cowmain_rc) |>
+      group_split() |>
+      map2(pal, \(x, y) union_density_gg(x, y))
+    
+    ggs[[1]] <- ggs[[1]] +
+      ggtitle("PRIVATE SECTOR", subtitle = "Share of paid employees that are union members") +
+      theme(plot.title = element_text(color = dashpal[2]))
+    
+    ggs[[2]] <- ggs[[2]] +
+      ggtitle("PUBLIC SECTOR", subtitle = "Share of paid employees that are union members") +
+      theme(plot.title = element_text(color = dashpal[1]))
+    
+    if (input$gg_layout == "Vertical") {
+      ggs[[1]] + ggs[[2]]
+    } else if (input$gg_layout == "Horizontal") {
+      ggs[[1]] / ggs[[2]]
+    }
+  } else if (input$gg_layout == "Stacked") {
+    union_density_stacked_gg(df)
   }
 }
 
@@ -742,8 +799,8 @@ union_bars_patch <- function(df, pal) {
   facet_blank <- function(str) {str_replace_all(str, ".", "")}
   
   subtitle <- case_when(
-    input$gg_measure == "Proportion" ~ "Share of union members in group",
-    input$gg_measure == "Count" ~ "Number of union members"
+    input$measure == "Distribution (%)" ~ glue("Share of total union members by {input$variable}"),
+    input$measure == "Distribution (N)" ~ glue("Number of union members by {input$variable}")
   )
   
   ggs <- group_by(df, cowmain_rc) |> 
@@ -767,74 +824,71 @@ union_bars_patch <- function(df, pal) {
   }
 }
 
-# Render bar charts
-output$plot_pop <- renderPlot({
-  p <- union_bars_patch(dataset_pop(), bar_pal)
-  return(p)
-}
-, height = n_facets
-)
-
-##### Kable table
-# Prepare wide format data
-kb_prep <- function(df) {
+# Stacked area chart for stacked format
+union_area_gg <- function(.data) {
   
-  variable <- df |> distinct(variable) |> pull(variable) |> as.character()
+   .data <- mutate(.data, varlevel = fct_reorder(varlevel, p_memb, na.rm = TRUE))
   
-  if (input$tab_measure == "Density") {
-    df <- df |>
-      filter(union_bin == "Union member") |> 
-      select(survyear, cowmain_rc, varlevel, value = p_v) |> 
-      pivot_wider(
-        id_cols = c(survyear, cowmain_rc),
-        names_from = varlevel,
-        values_fn = \(x) cell_spec(formattable::percent(x, digits = 1))
-      ) 
+  if (input$gg_layout == "Stacked" & input$measure == "Distribution (%)") {
+  gg <- ggplot(.data, aes(.data$survyear, .data$p_memb, fill = .data$varlevel))
+  
+  } else if (input$gg_layout == "Stacked" & input$measure == "Distribution (N)") {
+  gg <- ggplot(.data, aes(.data$survyear, .data$n, fill = .data$varlevel))
+  
+  }
+  
+  gg <- gg +
+    geom_area(
+              color = "#fff") +
+    geom_label_repel(
+      data = filter(.data, survyear == 2024, p_memb >= .01),
+      aes(
+        label = .data$varlevel,
+        color = after_scale(prismatic::best_contrast(fill, c("white", "black")))
+      ),
+      position = ggpp::position_stacknudge(x = .5, vjust = 0.35),
+      size = 5,
+      fontface = "bold",
+      force = 0.05,
+      force_pull = 0.05,
+      point.padding = .02,
+      label.padding = .2,
+      hjust = 0,
+      seed = 2024,
+      direction = "y",
+      xlim = c(2024, 2150),
+      min.segment.length = 0.35
+    ) +
+    geom_hline(yintercept = 0) +
+    coord_cartesian(clip = "off") +
+    scale_x_continuous(breaks = seq(2006, 2024, by = 6), expand = c(0,0)) +
+    scale_fill_manual(values = rpal) +
+    theme_rr_dash() +
+    theme(
+      panel.grid.major.x = element_blank(),
+      panel.spacing.x = unit(area_margins(), "pt"),
+      plot.margin = margin(r = unit(area_margins(), "pt"))
+    ) +
+    facet_wrap(vars(cowmain_rc)) +
+    labs(x = NULL, y = NULL)
+  
+  if (input$measure == "Distribution (%)") {
+    gg<- gg + labs(subtitle = glue("Distribution of union members by {input$variable}")) +
+          scale_y_continuous(
+           # limits = c(0,1),
+            labels = label_percent(accuracy = 1L), expand = c(0, 0))
     
-  } else if (input$tab_measure == "Proportion") {
-    df <- df |>
-      select(survyear, cowmain_rc, varlevel, value = p_memb) |> 
-      pivot_wider(
-        id_cols = c(survyear, cowmain_rc),
-        names_from = varlevel,
-        values_fn = \(x) cell_spec(formattable::percent(x, digits = 1))
-      ) 
+  } else if (input$measure == "Distribution (N)") {
+    gg <- gg + labs(subtitle = glue("Number of union members by {input$variable}")) +
+      scale_y_continuous(
+        labels = label_number(accuracy = .1, scale_cut = cut_short_scale()), expand = c(0, 0))
   }
   
-  else if (input$tab_measure == "Count") {
-    df <- df |>
-      select(survyear, cowmain_rc, varlevel, value = n_v) |> 
-      pivot_wider(
-        id_cols = c(survyear, cowmain_rc),
-        names_from = varlevel,
-        values_fn = \(x) cell_spec(formattable::comma(x/1000, digits = 0)) 
-      ) 
-  }
-  
-  df |> 
-    arrange(cowmain_rc)
-  
+  if (input$variable == "Employment status") {
+    gg + facet_wrap(vars(var_orig, cowmain_rc), ncol = 2)
+  } else
+  gg
 }
-
-# Create reactive data set
-kbl_df <- reactive({
-  if (input$tab_measure == "Density") {
-    kb_prep(dataset())
-  } else if (input$tab_measure %in% c("Demographics (%)", "Demographics (N)")) {
-    kb_prep(dataset_pop())
-  }
-})
-
-# Table titles
-kb_title <- reactive({
-  if (input$tab_measure == "Density") {
-    "<span style='font-size:18px'><b>Union density (% of group that are Union members)</b></span>"
-  } else if (input$tab_measure == "Demographics (%)") {
-    "<span style='font-size:18px'><b>Union member demographics (% of members that belong to group)</b></span>"
-  } else if (input$tab_measure == "Demographics (N)") {
-    "<span style='font-size:18px'><b>Number of union members in thousands</b></span>"
-  }
-})
 
 # Table function
 union_kbl <- function(df) {
@@ -849,7 +903,7 @@ kb_align <- c("l", rep("r", ncol(df)-1))
 df |> 
   ungroup() |> 
   select(-cowmain_rc) |> 
-  rename(Year = survyear) |> 
+  rename(Year = 1) |> 
   kbl(format = "html", escape = FALSE, align = kb_align) |> 
   kable_styling(
     bootstrap_options = c("striped", "hover", "responsive"),
@@ -858,19 +912,43 @@ df |>
   pack_rows("Private sector",
             kb_rows[kb_rows$cowmain_rc=="Private sector",]$rowfirst,
             kb_rows[kb_rows$cowmain_rc=="Private sector",]$rowlast,
-            label_row_css = "border-bottom: 1px solid;background-color:#6F8FCF;color:#fff") |> 
+            label_row_css = "border-bottom: 1px solid;background-color:#117777;color:#fff") |> 
   pack_rows("Public sector",
             kb_rows[kb_rows$cowmain_rc=="Public sector",]$rowfirst,
             kb_rows[kb_rows$cowmain_rc=="Public sector",]$rowlast,
-            label_row_css = "border-bottom: 1px solid;background-color:#8f1f3f;color:#fff") |> 
-  scroll_box(width = "100%", height = "500px", fixed_thead = T)
+            label_row_css = "border-bottom: 1px solid;background-color:#771155;color:#fff") |> 
+  scroll_box(width = "100%", height = "700px", fixed_thead = T)
 
 }
+```
 
-# Create title output
+```{r}
+#| context: server
+##### OUTPUT
+# Render charts
+output$plot <- renderPlot({
+  # Density charts
+  if (input$measure == "Union density"  &
+      input$gg_layout %in% c("Horizontal", "Vertical")) {
+    p <- union_density_patch(dataset(), dens_pal)
+  } else if (input$measure == "Union density"  &
+             input$gg_layout == "Stacked") {
+    p <- union_density_stacked_gg(dataset())
+  } else if (input$measure %in% c("Distribution (%)", "Distribution (N)") &
+             input$gg_layout %in% c("Horizontal", "Vertical")) {
+    p <- union_bars_patch(dataset_pop(), bar_pal)
+  } else if (input$measure %in% c("Distribution (%)", "Distribution (N)") &
+             input$gg_layout == "Stacked") {
+    p <- union_area_gg(dataset_pop())
+  }
+  return(p)
+}
+, height = n_facets)
+
+# Create table title output
 output$table_title <- renderText({kb_title()})
 
-# Create table
+# Create table output
 output$table <- reactive({union_kbl(kbl_df())})
 
 ##### Data
